objects/Antra_Projects__c.object
<CustomObject>
    <label>Antra Projects</label>
    <nameField>
        <label>Antra Projects Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Antra Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <label>Client Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Antra_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Antra Employee</label>
        <referenceTo>Antra_Employee__c</referenceTo>
        <relationshipLabel>Antra Projects</relationshipLabel>
        <relationshipName>Antra_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>